Add group to project API
